Fix the HTML issue with the header of messages being too large...

--- a/src/plugins/Freetalk/ui/web/css/freetalk.css
+++ b/src/plugins/Freetalk/ui/web/css/freetalk.css
@@ -13,6 +13,10 @@
 	color: #c00;
 }
 
+.freetalk .message .title {
+	height: 1.2em;
+}
+
 .freetalk .message .title.unread {
 	background-color: #ddd;
 }
